Update wifi network immediately when it's disabled

Bug: 798325
Change-Id: Icc0e4a8e6e61b01e5736d52e65632b3e47a1f0d6
Reviewed-on: https://chromium-review.googlesource.com/936003
Commit-Queue: Xiaoyin Hu <xiaoyinh@chromium.org>
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#539290}
Former-commit-id: 50ef07e85110f261574c300e8c236274ea05797f